# PyHexOpt

./: .gitignore  LICENSE  main.py  playground.ipynb  pyproject.toml  settings.yaml  tests\integration\corrected_simple_mesh.msh
.github/workflows/: python-app.yml
adapters/: logger.py
core/: utils.py
examples/Square_mesh/: bad_mesh_simple.msh  square.msh  square_rot_bad.msh  square_rot_bad_1.msh  square_rot_bad_2.msh  square_rot_bad_3.msh
pyhexopt/: main.py
pyhexopt/adapters/: example_creator.py  logger.py  meshio_.py
pyhexopt/core/: integrated.py  jaxobian.py  move.py  neighbor.py  obj.py  old.py  optim.py  utils.py
tests/: conftest.py  example_creator.py
tests/core/: test_integrated.py  test_jaxobian.py  test_meshio_.py  test_move.py  test_neighbor.py  test_obj.py  test_utils.py
tests/integration/: move_rot_mesh.msh  test_simple_mesh.py
